discussion/kv_engine/170521/170521_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

Create json_validator library

This is currently a wrapper on top of JSON_checker,
and the main purpose of the library is to make it
easy to flip the underlying library without having
to manually update code in a lot of other locations
in order to flip the backend.

Change-Id: I527012ecccfe1cd43c0794361b159f0e7f3c7c29

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-02-11 13:32:22.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-11 13:44:30.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43857/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43857/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36976/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36976/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18321/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18321/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25688/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25688/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16362/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16362/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5193/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14385/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/json/syntax_validator.cc b/json/syntax_validator.cc
index cb22c14ab..38f6266c3 100644
--- a/json/syntax_validator.cc
+++ b/json/syntax_validator.cc
@@ -58,7 +58,8 @@ std::string to_string(const cb::json::SyntaxValidator::Type&amp; type) {
     return &quot;Unknown: &quot; + std::to_string(int(type));
 }
 
-std::ostream&amp; operator&lt;&lt;(std::ostream&amp; os, const cb::json::SyntaxValidator::Type&amp; type) {
+std::ostream&amp; operator&lt;&lt;(std::ostream&amp; os,
+                         const cb::json::SyntaxValidator::Type&amp; type) {
     os &lt;&lt; to_string(type);
     return os;
 }
diff --git a/json/syntax_validator.h b/json/syntax_validator.h
index ad988f7e8..e2c85989f 100644
--- a/json/syntax_validator.h
+++ b/json/syntax_validator.h
@@ -11,8 +11,8 @@
 #pragma once
 
 #include &lt;memory&gt;
-#include &lt;string_view&gt;
 #include &lt;ostream&gt;
+#include &lt;string_view&gt;
 
 namespace cb::json {
 
@@ -34,5 +34,6 @@ public:
 
 } // namespace cb::json
 
-std::ostream&amp; operator&lt;&lt;(std::ostream&amp; os, const cb::json::SyntaxValidator::Type&amp; t);
+std::ostream&amp; operator&lt;&lt;(std::ostream&amp; os,
+                         const cb::json::SyntaxValidator::Type&amp; t);
 std::string to_string(const cb::json::SyntaxValidator::Type&amp; type);
diff --git a/json/syntax_validator_bench.cc b/json/syntax_validator_bench.cc
index 35a07a306..cfad728b7 100644
--- a/json/syntax_validator_bench.cc
+++ b/json/syntax_validator_bench.cc
@@ -87,7 +87,9 @@ static void BM_SyntaxValidator_NlohmannJsonArray(benchmark::State&amp; state) {
     benchmarkJsonValidator(
             SyntaxValidator::Type::Nlohmann, state, makeArray(state), true);
 }
-BENCHMARK(BM_SyntaxValidator_NlohmannJsonArray)-&gt;RangeMultiplier(10)-&gt;Range(1, 10000);
+BENCHMARK(BM_SyntaxValidator_NlohmannJsonArray)
+        -&gt;RangeMultiplier(10)
+        -&gt;Range(1, 10000);
 
 // Benchmark checking a nested JSON dictonary as JSON; e.g.
 //   {&quot;0&quot;: { &quot;1&quot;: { ... }}}

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14385/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15543/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:230:16: error: no member named "xattr" in namespace "cb" [clang-diagnostic-error]
    return cb::xattr::validate(*validator, view);
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15543/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:230:16:
error: no member named "xattr" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15543/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17283/ : FAILURE

Compile error at [2022-02-11T13:43:07.129Z] ../kv_engine/json/syntax_validator_test.cc:93:57:
error: missing braces around initializer for ?std::__array_traits<unsigned char, 3>::_Type? {aka ?unsigned char [3]?} [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17283/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17588/ : FAILURE

Compile error at [2022-02-11T13:42:59.175Z] ../kv_engine/json/syntax_validator_test.cc:93:57:
error: missing braces around initializer for ?std::__array_traits<unsigned char, 3>::_Type? {aka ?unsigned char [3]?} [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17588/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5254/ : FAILURE

Compile error at [2022-02-11T13:43:56.793Z] ../kv_engine/json/syntax_validator_test.cc:93:57:
error: missing braces around initializer for ?std::__array_traits<unsigned char, 3>::_Type? {aka ?unsigned char [3]?} [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5254/ )
----------------------------------------------------------------------------------------------------------------------
